--- a/pom.xml
+++ b/pom.xml
@@ -15,3 +15,9 @@
     </properties>
 
 </project>
+
+<!--<properties>-->
+<!--<maven.compiler.source>11</maven.compiler.source>-->
+<!--<maven.compiler.target>11</maven.compiler.target>-->
+<!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--</properties>-->
